[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krnl_sign"
version = "0.0.1"
authors = [
  { name="Mark Smith", email="totallynotmark6@gmail.com" },
]
description = "funny sign go brrrrrrrr"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "arrow"
]